Começãndo o desenvolvimento da estrutura do site em preto e branco v2

--- a/index.html
+++ b/index.html
@@ -82,8 +82,20 @@
                     </div>
                 </div>
             </div>
-
-
+            <div class="row" style="margin-top: 10px;">
+                <div class="cold3 Esquerda">
+                    <img class="arredonda center" style="border: solid 1px black; display: block; margin-top: 22px; width: 230px; height: 230px;" src="img/manancialjamaica.png" height="32" width="32">
+                </div>
+                <div class="cold7 Esquerda" style="margin-top: 77px; text-align: center; font-size: 19px; font-family: ubuntu;">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut .
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut .
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut .
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut .
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut .
+                </div>
+                
+                
+            </div>
         </div>
         <footer>
 
