Começãndo o desenvolvimento da estrutura do site em preto e branco v2

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row" style="margin-top: 10px;">
+            <div class="row" style="margin-top: 10px; padding-bottom: 10px;">
                 <div class="cold3 Esquerda">
                     <img class="arredonda center" style="border: solid 1px black; display: block; margin-top: 22px; width: 230px; height: 230px;" src="img/manancialjamaica.png" height="32" width="32">
                 </div>
